# koti

./: .gitignore  PKGBUILD  README.md  confirm.py  core.py  definitions.py  demo.py  json_store.py  lib.py  main.py  mypy.ini  optimierung.txt  pyproject.toml  shell.py  utils.py
example/: bootstrap.sh  koti-apply  main.py
example/docker/homeassistant/: docker-compose.yml
example/files/: auto-cpu-freq.py  cpu-summary  cpufreq-adjuster.py  gpu-summary  kglobalshortcutsrc
example/modules/: ananicy.py  base.py  cpu.py  cpufreq.py  desktop.py  development.py  docker.py  fish.py  fstab.py  gaming.py  kernel.py  koti_dev.py  networking.py  nvidia.py  nvidia_undervolting.py  nvme_thermal_throttling.py  ollama_aichat.py  pacman.py  ryzen.py  ryzen_undervolting.py  systray.py
example/systems/: __init__.py  common.py  dan.py  distrobox.py  lenovo.py  mserver.py  quickemu.py
items/: checkpoint.py  file.py  hooks.py  package.py  pacman_key.py  swapfile.py  systemd.py
managers/: __init__.py  checkpoint.py  command.py  file.py  hook.py  hooks.py  package.py  pacman.py  pacman_key.py  swapfile.py  symlink.py  systemd.py
modules/: __init__.py  ananicy.py  base.py  cpu_freq_policy.py  cpufreq.py  desktop.py  fish.py  fstab.py  gaming.py  kernel.py  nvidia_undervolting.py  nvme_thermal_throttling.py  ollama_aichat.py  pacman.py  ryzen_undervolting.py  swapfile.py  systray.py
src/koti/: __init__.py  confirmmode.py  confirmmodes.py  core.py  logging.py  model.py  optimizer.py  presets.py  types.py
src/koti/items/: __init__.py  (+16 more)
utils/: __init__.py  confirm.py  shell.py
(+44 files in other folders)
