[build-system]
requires = ["setuptools>=77.0.3", "pyscipopt", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "koti"
version = "0.1.0"
description = "Declarative configuration manager"
license = "GPL-3.0-or-later"
authors = [{ name = "Manuel Bleichner" }]
requires-python = ">=3.12"

[tool.mypy]
check_untyped_defs = true
exclude = "example/files"
explicit_package_bases = true
files = [ "example" ]
mypy_path = [
    "$MYPY_CONFIG_FILE_DIR/example",
    "$MYPY_CONFIG_FILE_DIR/src",
]
